Add ipaddress requirement for uiuc_admin

--- a/server_proj/requirements.txt
+++ b/server_proj/requirements.txt
@@ -1,3 +1,4 @@
+ipaddress
 python-ldap
 -e hg+https://bitbucket.org/stephen-butler/django-oauth-plus@oracle-fix#egg=django-oauth-plus
 -e git+https://github.com/sbutler/django-geoposition#egg=django-geoposition
