Add shibboleth to the server auth

--- a/server_proj/requirements.txt
+++ b/server_proj/requirements.txt
@@ -2,3 +2,6 @@ ipaddress
 python-ldap
 -e hg+https://bitbucket.org/stephen-butler/django-oauth-plus@oracle-fix#egg=django-oauth-plus
 -e git+https://github.com/sbutler/django-geoposition#egg=django-geoposition
+# Customizations not yet in upstream
+-e git+https://github.com/sbutler/django-shibboleth-remoteuser#egg=django-shibboleth-remoteuser-0.3.1
+
