--- a/server_proj/requirements.txt
+++ b/server_proj/requirements.txt
@@ -4,4 +4,5 @@ python-ldap
 -e git+https://github.com/sbutler/django-geoposition#egg=django-geoposition
 # Customizations not yet in upstream
 -e git+https://github.com/sbutler/django-shibboleth-remoteuser#egg=django-shibboleth-remoteuser-0.3.1
+bleach
 
